(general) Fix notification count badge on mobile

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -193,11 +193,15 @@
   position: relative;
 
   .badge {
-    position: absolute;
-    top: 10px;
-    left: 15px;
     padding: 2px 4px;
     box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.66);
+
+    @media screen and (min-width: $lg-min) {
+      z-index: 1;
+      position: absolute;
+      top: 10px;
+      left: 15px;
+    }
   }
 }
 
